--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4089,3 +4089,12 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgba(4, 120, 87, var(--tw-bg-opacity)); /* Adjust the color values to represent green */
 }
+
+.filter-input {
+  width: 200px; /* Adjust the width as needed */
+}
+
+.small-dropdown {
+  width: 71px; /* Adjust the width as needed */
+  height: 40px;
+}
