--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4098,6 +4098,10 @@ select {
   width: 200px; /* Adjust the width as needed */
 }
 
+.filter-input1 {
+  width: 300px; /* Adjust the width as needed */
+}
+
 .small-dropdown {
   width: 71px; /* Adjust the width as needed */
   height: 40px;
@@ -4160,4 +4164,8 @@ button {
 
 .filter label {
   margin-right: 5px;
+}
+
+.pr-15 {
+  padding-right: 4.5rem;
 }
