--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -2290,12 +2290,20 @@ select {
   margin-left: 0.75rem;
 }
 
+.ml-4{
+  margin-left: 1rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mr-6 {
+  margin-right: 10rem;
 }
 
 .mb-4 {
@@ -2352,6 +2360,14 @@ select {
 
 .mb-24 {
   margin-bottom: 6rem;
+}
+
+.mb-10 {
+  margin-bottom: 12rem;
+}
+
+.mb-11 {
+  margin-bottom: 14.5rem;
 }
 
 .mt-32 {
@@ -2681,6 +2697,11 @@ select {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.px-7 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-8 {
@@ -4178,6 +4199,30 @@ button {
   margin-left: 3.7rem;
 }
 
+.ml-7 {
+  margin-left: 2.25rem;
+}
+
+.ml-6 {
+  margin-left: 2rem;
+}
+
+.ml-5 {
+  margin-left: 3rem;
+}
+
+.ml-10 {
+  margin-left: 3.37rem;
+}
+
+.ml-11 {
+  margin-left: 7rem;
+}
+
+.ml-111 {
+  margin-left: 5.2rem;
+}
+
 .border-green-600 {
   --tw-border-opacity: 1;
   border-color: rgba(72, 187, 120, var(--tw-border-opacity));
@@ -4186,4 +4231,82 @@ button {
 .border-orange-600 {
   --tw-border-opacity: 1;
   border-color: rgba(249, 115, 22, var(--tw-border-opacity));
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.radio-group {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.radio-group input {
+  margin-right: 5px;
+}
+
+.switch {
+  position: relative;
+  width: 40px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
+
+.switch-label {
+  display: flex;
+  align-items: center;
+}
+
+.switch-label .switch {
+  margin-right: 10px;
 }
