--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4224,7 +4224,7 @@ button {
 }
 
 .ml-12 {
-  margin-left: 12rem;
+  margin-left: 17rem;
 }
 
 .border-green-600 {
@@ -4325,4 +4325,41 @@ input:checked + .slider:before {
   width: 1.5rem; /* Set the width of the icon */
   height: auto; /* Maintain aspect ratio */
   max-width: 100%; /* Ensure the icon doesn't exceed its container's width */
+}
+
+.modal {
+  /* Positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999; /* Ensure the modal is on top of other content */
+
+  /* Background */
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+
+  /* Remove default browser styles for better compatibility */
+  outline: none;
+}
+
+.modal-content {
+  /* Modal box */
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.close {
+  /* Close button */
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  color: #888;
 }
