--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4421,9 +4421,9 @@ input:checked + .slider:before {
 
 .table-data {
   max-width: 20px; /* Set a maximum width for the table cells */
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  /* overflow: hidden; */
+  /* text-overflow: ellipsis; */
+  white-space: normal;
   padding-left: 1.5rem;
   border-top-width: 0px;
   border-left-width: 0px;
