--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4453,6 +4453,21 @@ input:checked + .slider:before {
   padding-top: 1rem;
 }
 
+.table-data2 {
+  max-width: 20px; /* Set a maximum width for the table cells */
+  white-space: normal;
+  padding-left: 1.5rem;
+  border-top-width: 0px;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  vertical-align: middle;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+
 .selected {
   font-weight: bold;
 }
