--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4495,3 +4495,40 @@ canvas{
   height: auto;
   display: block;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  max-height: 200px;
+  overflow-y: auto;
+  outline: none;
+}
+
+.dropdown-content.show {
+  display: block;
+}
+
+.dropbtn {
+  background-color: #ffffff;
+  color: rgb(203, 213, 225);
+  padding: 10px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+.dropbtn:hover,
+.dropbtn:focus {
+    outline: none;
+}
+
