--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4557,3 +4557,27 @@ canvas{
 .late { background-color: #fff3cd; }
 .absent { background-color: #f8d7da; }
 
+.custom-filter-input {
+  border: 1px solid #e2e8f0;
+  padding: 10px;
+  border-radius: 5px;
+  width: 100%;
+  font-size: 14px;
+}
+
+.custom-filter-input1 {
+  border: 1px solid #e2e8f0;
+  padding: 10px;
+  border-radius: 5px;
+  width: 100%;
+  font-size: 14px;
+}
+
+.label-required::after {
+  content: " *";
+  color: red;
+}
+
+.input-error {
+  border-color: red;
+}
