--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4541,10 +4541,6 @@ canvas{
     outline: none;
 }
 
-.present { background-color: #d4edda; }
-.late { background-color: #fff3cd; }
-.absent { background-color: #f8d7da; }
-
 .custom-filter-input {
   border: 1px solid #e2e8f0;
   padding: 10px;
@@ -4573,31 +4569,104 @@ canvas{
 .calendar {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  gap: 10px;
+  gap: 1px;
+  background-color: #f7fafc;
 }
 
 .header {
+  background: #f7fafc;
   font-weight: bold;
+  padding: 10px 0;
   text-align: center;
 }
 
 .calendar-day {
+  padding: 10px;
+  text-align: center;
+  height: 60px;
+}
+
+.calendar-day.rounded {
+  border-radius: 5px;
+}
+
+.calendar-day.weekend {
+  background: #e2e8f0;
+}
+
+.calendar-day.present {
+  background: #c6f6d5;
+}
+
+.calendar-day.absent {
+  background: #fed7d7;
+}
+
+.calendar-day.empty {
+  background: transparent;
+}
+
+.calendar-day.not-current-month {
+  color: #cbd5e0;
+}
+
+.legend {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 40px;
-  border: 1px solid #ccc;
+  gap: 10px;
 }
 
-.weekend {
-  background-color: #f0f0f0;
+.legend-item {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 5px;
 }
 
-.not-current-month {
-  color: #ccc;
+/* .legend-item.present {
+  background: #c6f6d5;
 }
 
-.empty {
-  background: none;
-  border: none;
+.legend-item.absent {
+  background: #fed7d7;
+}
+
+.legend-item.weekend {
+  background: #e2e8f0;
+} */
+
+.calendar-day.present {
+  background-color: #d4edda;
+}
+
+.calendar-day.absent {
+  background-color: #f8d7da;
+}
+
+.calendar-day.weekend {
+  background-color: #e2e3e5;
+}
+
+.legend-item.present {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #d4edda;
+  margin-right: 5px;
+}
+
+.legend-item.absent {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #f8d7da;
+  margin-right: 5px;
+}
+
+.legend-item.weekend {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: #e2e3e5;
+  margin-right: 5px;
 }
