--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4736,3 +4736,16 @@ canvas{
 .attendance-legend-item.weekend {
   background-color: #edf2f7;
 }
+
+.input-style {
+  width: 100%;
+  border: 0;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  font-size: 14px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  outline: none;
+  transition: all 0.15s ease;
+}
