--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4864,3 +4864,9 @@ canvas{
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
 }
+
+.transparent-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
