--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4870,3 +4870,20 @@ canvas{
   border: none;
   cursor: pointer;
 }
+
+.park-dropdown {
+  max-height: 150px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  position: absolute;
+  width: 100%;
+  z-index: 1000;
+  background: white;
+}
+.park-dropdown li {
+  padding: 8px;
+  cursor: pointer;
+}
+.park-dropdown li:hover {
+  background-color: #eee;
+}
