--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4888,7 +4888,7 @@ canvas{
   background-color: #eee;
 }
 
-.toaster {
+/* .toaster {
   position: fixed;
   bottom: 10px;
   right: 10px;
@@ -4904,5 +4904,31 @@ canvas{
   background-color: red;
 }
 .toaster.hidden {
+  opacity: 0;
+} */
+
+.toast {
+  position: fixed;
+  top: 1rem;
+  right: 1rem;
+  z-index: 1000;
+  padding: 1rem;
+  border-radius: 0.25rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  transition: opacity 0.5s ease-out;
+}
+.toast.success {
+  background-color: #38a169; /* Green */
+  color: white;
+}
+.toast.error {
+  background-color: #e53e3e; /* Red */
+  color: white;
+}
+.toast.info {
+  background-color: #3182ce; /* Blue */
+  color: white;
+}
+.toast.hide {
   opacity: 0;
 }
