--- a/public/assets/styles/tailwind.css
+++ b/public/assets/styles/tailwind.css
@@ -4958,3 +4958,32 @@ label {
 .card {
   border-left-width: 4px;
 }
+
+.modal2 {
+  /* Positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1040; /* Ensure the modal is on top of other content */
+  overflow: auto; /* Enable scrolling */
+  /* Background */
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
+
+  /* Remove default browser styles for better compatibility */
+  outline: none;
+}
+
+.modal-content2 {
+  /* Modal box */
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  max-height: 90%; /* Set maximum height */
+    overflow-y: auto; /* Enable vertical scrolling */
+}
